# improve-my-cv

./: .env_template  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  extracted_resume.json  pyproject.toml
.github/workflows/: unit_tests.yaml
improve_my_cv/: __init__.py  cv_improve.py  llm_handler.py  log_config.py  main.py  prompt_creator.py  sanity_check.py  ui_cli.py  ui_streamlit.py  utils.py
improve_my_cv/llm_handlers/: base_handler.py  gemini.py  ollama.py
improve_my_cv/post_processor/: resume_rebuild.py
improve_my_cv/prompt_handler/: cv_fields_filter.py  prompt_creator.py
improve_my_cv/tests/: __init__.py  mock_llm_handler.py  test_cv_improve.py  test_prompt_creator.py  test_resume_rebuild.py
json_cv/: example_cv.json
src/: main.py
