[tool.poetry]
name = "improve-my-cv"
version = "0.1.0"
description = ""
authors = ["gsalomone <gianfranco.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.1.1"
streamlit = "^1.33.0"
pre-commit = "^3.7.0"
deepdiff = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
